Overflow fix

--- a/assets/stylesheets/style.scss
+++ b/assets/stylesheets/style.scss
@@ -205,7 +205,7 @@ body{
     @include flexbox(flex, row, flex-start);
     flex-flow: row wrap;
     height: 33vh;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .pokeball{
@@ -234,7 +234,7 @@ body{
 .poke-results {
     width: 100%;
     height: 33vh;
-    overflow: scroll;
+    overflow: auto;
 }
 
 .pokemon-img{
